@@ -1288,6 +1288,7 @@ Localization
         #LOC_BDArmory_MissileAssign = Missile Assign
         #LOC_BDArmory_CurrentLocks = Current Locks
         #LOC_BDArmory_Offset = Ordinance Offset
+        #LOC_BDArmory_Deploy_Time = Deploy Time
 
     // Safety Systems
         #LOC_BDArmory_SSTank = Self-Sealing Tank
